--- a/resources/config.yml
+++ b/resources/config.yml
@@ -3,3 +3,9 @@
 # Use the & symbol for color coding.
 
 Kick-Message: "&cPlease join via the proxy."
+
+# If true this will use pocketmines API to transfer a player to the main proxy IP.
+# IP can be a string too if kept in quotation marks. E.g: play.yourserver.net
+
+Send-To-Proxy-On-Kick: false
+Proxy-IP: "0.0.0.0"
